--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     -->
     <div class="box-profile">
         <h2 class="sub-title">
-            <span class="color-green">P</span>rotfolio
+            <span class="color-green">P</span>rofile
         </h2>
         <div class="item-list">
             <img src="img/profile2.png" alt="プロフィール画像">
@@ -61,10 +61,54 @@
     <!--
         workの箱
     -->
-    <div>
+    <div class="box-works">
+        <h2 class="sub-title">
+            <span class="color-green">W</span>orks
+        </h2>
 
+        <ul class="works-list">
+            <li>
+                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+
+            <li>
+                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+
+            <li>
+                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+
+        </ul>
     </div>
-</div>
+
+    <!--
+        footerタグの作成
+        ・copyrightの設定
+        →pタグを使います
+    -->
+    <footer class="block-footer">
+        <p>Copyright © TECH I.S., Inc.</p>
+    </footer>
+
 
 </body>
 </html>
