--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--
+        レスポンシブの設定
+        ・viewportの設定
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--このサイトは何か　説明する場所-->
     <meta name="description" content="テック太郎の自己紹介">
@@ -41,7 +45,7 @@
         <div class="item-list">
             <img src="img/profile2.png" alt="プロフィール画像">
             <b>テック太郎</b>
-            <p class="color-green">HTML / CSS / PHP / MySQL / Laravel / Adobe XD</p>
+            <p class="color-green">HTML /CSS /PHP /MySQL /Laravel /Adobe XD</p>
             <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
         </div>
         <ul class="icon-list">
@@ -68,7 +72,7 @@
 
         <ul class="works-list">
             <li>
-                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <img src="img/woks2.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
@@ -78,7 +82,7 @@
             </li>
 
             <li>
-                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <img src="img/woks2.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
@@ -88,7 +92,7 @@
             </li>
 
             <li>
-                <img src="img/works1.png" alt="Twitterクローンの画像">
+                <img src="img/woks2.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
